Fixed issue where you could scroll in menus on mobile

--- a/f1_info_frontend/src/styles.scss
+++ b/f1_info_frontend/src/styles.scss
@@ -26,3 +26,7 @@ a {
     font-weight: 500;
   }
 }
+
+.disable-body-scroll {
+  overflow: hidden;
+}
